Fix: Make Step2 runnable